// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`GuestAccessPage component > allows playing as a guest if token is valid 1`] = `
<DocumentFragment>
  <div
    class="guest-link index-page"
  >
    <div
      class="logo"
    />
    <div
      class="welcome"
    >
      <h2
        class="strapline"
      >
        Like normal Bingo, but with music!
      </h2>
      <p
        class="description"
      >
        Musical Bingo is a variation on the normal game of bingo, where the numbers are replaced with songs that the players must listen out for.
      </p>
      <p
        class="description"
      >
        If you know your Bruce Springsteen from your Beyonce, your Whitney Houston from your Wu-Tang Clan, why not join use for a game or two?
      </p>
      <h2
        class="description"
      >
        Checking if guest link is valid...
      </h2>
      <p
        class="action-buttons mt-5"
      >
        <a
          class="login nav-link btn btn-success btn-lg login-button"
          href="/user/login"
        >
          Log in
        </a>
        <a
          class="login nav-link btn btn-success btn-lg login-button"
          href="/register"
        >
          Create an account
        </a>
        <button
          class="play-guest nav-link btn btn-primary btn-lg"
        >
          Play as a guest
        </button>
      </p>
    </div>
    <div
      class="number footer"
    >
      Game 2023-1-8 / Ticket 11
    </div>
  </div>
</DocumentFragment>
`;

exports[`GuestAccessPage component > matches snapshot 1`] = `
<DocumentFragment>
  <div
    class="guest-link index-page"
  >
    <div
      class="logo"
    />
    <div
      class="welcome"
    >
      <h2
        class="strapline"
      >
        Like normal Bingo, but with music!
      </h2>
      <p
        class="description"
      >
        Musical Bingo is a variation on the normal game of bingo, where the numbers are replaced with songs that the players must listen out for.
      </p>
      <p
        class="description"
      >
        If you know your Bruce Springsteen from your Beyonce, your Whitney Houston from your Wu-Tang Clan, why not join use for a game or two?
      </p>
      <h2
        class="description"
      >
        Checking if guest link is valid...
      </h2>
      <p
        class="action-buttons mt-5"
      >
        <a
          class="login nav-link btn btn-success btn-lg login-button"
          href="/user/login"
        >
          Log in
        </a>
        <a
          class="login nav-link btn btn-success btn-lg login-button"
          href="/register"
        >
          Create an account
        </a>
        <button
          class="play-guest nav-link btn btn-primary btn-lg"
        >
          Play as a guest
        </button>
      </p>
    </div>
    <div
      class="number footer"
    >
      Game 2023-1-8 / Ticket 11
    </div>
  </div>
</DocumentFragment>
`;

exports[`GuestAccessPage component allows playing as a guest if token is valid 1`] = `
<DocumentFragment>
  <div
    class="guest-link index-page"
  >
    <div
      class="logo"
    />
    <div
      class="welcome"
    >
      <h2
        class="strapline"
      >
        Like normal Bingo, but with music!
      </h2>
      <p
        class="description"
      >
        Musical Bingo is a variation on the normal game of bingo, where the numbers are replaced with songs that the players must listen out for.
      </p>
      <p
        class="description"
      >
        If you know your Bruce Springsteen from your Beyonce, your Whitney Houston from your Wu-Tang Clan, why not join use for a game or two?
      </p>
      <p
        class="action-buttons mt-5"
      >
        <a
          class="login nav-link btn btn-success btn-lg login-button"
          href="/user/login"
        >
          Log in
        </a>
        <a
          class="login nav-link btn btn-success btn-lg login-button"
          href="/register"
        >
          Create an account
        </a>
        <button
          class="play-guest nav-link btn btn-primary btn-lg"
        >
          Play as a guest
        </button>
      </p>
    </div>
    <div
      class="number footer"
    >
      Game 2023-1-8 / Ticket 11
    </div>
  </div>
</DocumentFragment>
`;
